--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   django-web:
     build:
@@ -9,10 +7,8 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
-    working_dir: /app
     command: >
       bash -c "
-      pip install -r requirements.txt && 
-      python manage.py migrate --no-input && 
-      python install.py && 
-      python manage.py runserver 0.0.0.0:8000"
+        python manage.py migrate --no-input &&
+        python manage.py runserver 0.0.0.0:8000
+      "
