add compose.yaml for prod

--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./app:/app
     environment:
-      - DEBUG=False
+      - DEBUG=True
       - DJANGO_SETTINGS_MODULE=djangoapi.settings
     command: >
       bash -c "
